--- a/my_first_app/package.json
+++ b/my_first_app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/picker": "^1.8.1",
+    "@react-native-community/slider": "^4.1.10",
     "react": "16.9.0",
     "react-native": "0.61.5"
   },
