--- a/sampleApp/ios/sampleApp/Info.plist
+++ b/sampleApp/ios/sampleApp/Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>material.ttf</string>
 		<string>Ionicons.ttf</string>
 		<string>FontAwesome.ttf</string>
 	</array>
