--- a/sampleApp/package.json
+++ b/sampleApp/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ant-design/react-native": "^4.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "^4.1.12",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
